--- a/p44-extdev-elsner/src/configure.ac
+++ b/p44-extdev-elsner/src/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([p44extdevelsner], [0.1], [luz@plan44.ch], [p44extdevelsner], [http://www.plan44.ch/])
+AC_INIT([p44extdevelsner], [2.0], [luz@plan44.ch], [p44extdevelsner], [http://www.plan44.ch/])
 AC_PREREQ([2.59])
 
 AC_CONFIG_AUX_DIR(configure_aux)
@@ -33,24 +33,21 @@ PKG_CHECK_MODULES([JSONC], [json-c >= 0.10 ], [], [
 # Checks for header files.
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h limits.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h unistd.h sys/resource.h], [], [AC_MSG_ERROR([required system header not found])])
 
-
 ASSUMED_BOOST_VER=146
 
-BOOST_REQUIRE([1.46],
-    [
-        unset boost_cv_version
-        unset boost_cv_inc_path
-        BOOST_REQUIRE([1.35],
-            [
-                AC_MSG_ERROR([could not find boost on your system])
-            ])
-        ASSUMED_BOOST_VER=135
-    ])
+BOOST_REQUIRE([1.46], [
+  unset boost_cv_version
+  unset boost_cv_inc_path
+  BOOST_REQUIRE([1.35], [
+    AC_MSG_ERROR([could not find boost on your system])
+  ])
+  ASSUMED_BOOST_VER=135
+])
 
 if test $ASSUMED_BOOST_VER -eq 135; then
-    AC_DEFINE([BOOST_VERSION_135], [1], [boost 1.35 or higher])
+  AC_DEFINE([BOOST_VERSION_135], [1], [boost 1.35 or higher])
 else
-    AC_DEFINE([BOOST_VERSION_146], [1], [boost 1.46 or higher])
+  AC_DEFINE([BOOST_VERSION_146], [1], [boost 1.46 or higher])
 fi
 
 BOOST_BIND
