--- a/vdcd/Config.in
+++ b/vdcd/Config.in
@@ -21,6 +21,13 @@ config VDCD_RRDB
     Enabling this includes support for librrd (round robin database, rrdtool).
     If enabled, vdcd depends on package librrd1
 
+config VDCD_PNG
+	bool "Include PNG support for advanced LED chain light effects"
+	default n
+  help
+    Enabling this includes support for displaying PNG images in LED matrix lights.
+    If enabled, vdcd depends on package libpng
+
 config VDCD_RPIWS281X
   depends on TARGET_brcm2708_bcm2708_DEVICE_rpi || TARGET_brcm2708_bcm2709_DEVICE_rpi-2 || TARGET_brcm2708_bcm2710_DEVICE_rpi-3
 	bool "Include support for WS281x LED-chains"
