--- a/vdcd/Makefile
+++ b/vdcd/Makefile
@@ -7,14 +7,15 @@ include $(TOPDIR)/rules.mk
 # name
 PKG_NAME:=vdcd
 # version of what we are downloading
-PKG_VERSION:=2.0.3.3
+PKG_VERSION:=2.0.4.2
 # version of this makefile
-PKG_RELEASE:=98
+PKG_RELEASE:=102
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_VERSION:=master
 PKG_SOURCE_URL:=https://github.com/plan44/vdcd.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
+
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 
@@ -26,7 +27,7 @@ PKG_USE_MIPS16:=0
 include $(INCLUDE_DIR)/package.mk
 
 define Package/$(PKG_NAME)
-  DEPENDS:=+libstdcpp +boost +libjson-c +libprotobuf-c +libsqlite3 +libopenssl +i2c-tools +libavahi-client +librt +VDCD_OLA:ola +VDCD_UBUS:libubus +VDCD_UBUS:libblobmsg-json +VDCD_RRDB:librrd1 $(CXX_DEPENDS)
+  DEPENDS:=+libstdcpp +boost +libjson-c +libprotobuf-c +libsqlite3 +libopenssl +i2c-tools +libavahi-client +librt +VDCD_OLA:ola +VDCD_PNG:libpng +VDCD_UBUS:libubus +VDCD_UBUS:libblobmsg-json +VDCD_RRDB:librrd1 $(CXX_DEPENDS)
 	SECTION:=plan44
 	CATEGORY:=plan44
 	SUBMENU:=products
@@ -50,6 +51,7 @@ CONFIGURE_ARGS += \
 	--enable-p44buildow \
 	$(call autoconf_bool,CONFIG_VDCD_OLA,ola) \
 	$(call autoconf_bool,CONFIG_VDCD_UBUS,ubus) \
+	$(call autoconf_bool,CONFIG_VDCD_PNG,png) \
 	$(call autoconf_bool,CONFIG_VDCD_RPIWS281X,rpiws281x) \
 	$(call autoconf_bool,CONFIG_VDCD_RRDB,rrdb)
 
