hermeld, lethd, p44featured: changed repo urls to p44featured

--- a/lethd/Makefile
+++ b/lethd/Makefile
@@ -12,8 +12,8 @@ PKG_VERSION:=1.9.1
 PKG_RELEASE:=24
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_VERSION:=master
-PKG_SOURCE_URL:=https://github.com/plan44/lethd.git
+PKG_SOURCE_VERSION:=lethd
+PKG_SOURCE_URL:=https://github.com/plan44/p44featured.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
