--- a/p44featured/Makefile
+++ b/p44featured/Makefile
@@ -12,9 +12,8 @@ PKG_VERSION:=1.0
 PKG_RELEASE:=3
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_VERSION:=p44featured
-#PKG_SOURCE_URL:=https://github.com/plan44/p44featured.git
-PKG_SOURCE_URL:=ssh://plan44@plan44.ch/home/plan44/sharedgit/p44featured.git
+PKG_SOURCE_VERSION:=master
+PKG_SOURCE_URL:=https://github.com/plan44/p44featured.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
