feed-wide: add PKG_MIRROR_HASH:=skip to all packages that pull from a current git branch
Since Nov 2020, w/o PKG_MIRROR_HASH these packages will be redownloaded and re-built at every make

--- a/ace-p44script/Makefile
+++ b/ace-p44script/Makefile
@@ -13,6 +13,7 @@ PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_VERSION:=master
+PKG_MIRROR_HASH:=skip
 PKG_SOURCE_URL:=https://github.com/plan44/ace-p44script.git
 #PKG_SOURCE_URL:=ssh://plan44@plan44.ch/home/plan44/sharedgit/ace-p44script.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
