--- a/vdcd/Config.in
+++ b/vdcd/Config.in
@@ -2,17 +2,33 @@
 if PACKAGE_vdcd
 
 config VDCD_OLA
-	bool "Include OLA Support"
+	bool "Include OLA support"
 	default n
   help
     Enabling this includes support for OLA (Open Lighting Architecture).
     If enabled, vdcd depends on package ola
 
 config VDCD_UBUS
-	bool "Include ubus Support"
+	bool "Include ubus support"
 	default n
   help
     Enabling this includes support for ubus API
+
+config VDCD_EV
+	bool "Base Mainloop on libev"
+	default n
+  help
+    Enabling this makes the mainloop use libev for I/O polling which allows
+    using features that are libev-based such as UWSC websockets.
+    If enabled, vdcd depends on libev
+
+config VDCD_UWSC
+  depends on VDCD_EV
+	bool "Include uwsc (websocket) support"
+	default n
+  help
+    Enabling this includes support for websocket clients in p44script
+    If enabled, vdcd depends on package libuwsc
 
 config VDCD_RRDB
 	bool "Include rrd(tool) support for logging sensor data"
