p44sbb-config: use the new P44Omega2S device (although p44splitflapctrl has Omega2)
- works because only -S specifics are LEDs connected to not available pins 36+37 in Omega2
- advantage are some P44 modernisations compared to plain Omega2 DT, and things like writable uboot env partition

--- a/p44sbb-config/Makefile
+++ b/p44sbb-config/Makefile
@@ -49,6 +49,9 @@ endif
 ifeq ($(CONFIG_TARGET_ramips_mt76x8_DEVICE_P44DSBOmega2),y)
   P44_CONFIG_PLATFORM_IDENTIFIER:=p44-dsb-omega2
 endif
+ifeq ($(CONFIG_TARGET_ramips_mt76x8_DEVICE_P44Omega2S),y)
+  P44_CONFIG_PLATFORM_IDENTIFIER:=p44-omega2s
+endif
 
 
 define Build/Prepare
