--- a/leth-config/Makefile
+++ b/leth-config/Makefile
@@ -1,4 +1,4 @@
-# Copyright (c) 2018 plan44.ch / Lukas Zeller, Zurich, Switzerland
+# Copyright (c) 2018-2021 plan44.ch / Lukas Zeller, Zurich, Switzerland
 #
 # Author: Lukas Zeller <luz@plan44.ch>
 
@@ -7,17 +7,20 @@ include $(TOPDIR)/rules.mk
 # name
 PKG_NAME:=leth-config
 # version of what we are downloading
-PKG_VERSION:=1.9.2
+PKG_VERSION:=2.0.0
 # version of this makefile
-PKG_RELEASE:=28
+PKG_RELEASE:=29
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 PKG_CHECK_FORMAT_SECURITY:=0
 
+PKG_CONFIG_DEPENDS := \
+	CONFIG_VERSION_NUMBER
+
 include $(INCLUDE_DIR)/package.mk
 
 define Package/$(PKG_NAME)
-	DEPENDS:=+mg44 +lethd +kmod-p44-ledchain +kmod-pwm-mediatek-ramips
+	DEPENDS:=+mg44 +p44featured +kmod-p44-ledchain +kmod-pwm-mediatek-ramips +ace-p44script
 	SECTION:=plan44
 	CATEGORY:=plan44
 	SUBMENU:=custom
@@ -40,23 +43,22 @@ endif
 ifeq ($(CONFIG_TARGET_ar71xx_generic_OMEGA),y)
   P44_CONFIG_PLATFORM_IDENTIFIER:=onion-omega
 endif
-ifeq ($(CONFIG_TARGET_ar71xx_generic_CARAMBOLA2),y)
-  P44_CONFIG_PLATFORM_IDENTIFIER:=carambola2
-endif
 ifeq ($(CONFIG_TARGET_ramips_mt76x8_DEVICE_omega2),y)
   P44_CONFIG_PLATFORM_IDENTIFIER:=omega2
 endif
-ifeq ($(CONFIG_TARGET_ramips_mt7688_DEVICE_omega2),y)
-  P44_CONFIG_PLATFORM_IDENTIFIER:=omega2
-endif
-ifeq ($(CONFIG_TARGET_ramips_mt7688_DEVICE_P44DSBOmega2),y)
+ifeq ($(CONFIG_TARGET_ramips_mt76x8_DEVICE_P44DSBOmega2),y)
   P44_CONFIG_PLATFORM_IDENTIFIER:=p44-dsb-omega2
+endif
+ifeq ($(CONFIG_TARGET_ramips_mt76x8_DEVICE_P44Omega2S),y)
+  P44_CONFIG_PLATFORM_IDENTIFIER:=p44-omega2s
 endif
 
 
 define Build/Prepare
 	mkdir -p $(PKG_BUILD_DIR)/etc
 	$(CP) ./files/* $(PKG_BUILD_DIR)/
+	# remove softlink to ace that might be copied along from source
+	rm $(PKG_BUILD_DIR)/www/ace
 endef
 
 
