p44-ledchain: adapt makefile for OpenWrt 22.03 (use $(KERNEL_MAKE_FLAGS))

--- a/p44-ledchain/Makefile
+++ b/p44-ledchain/Makefile
@@ -1,4 +1,4 @@
-# Copyright (C) 2017-2021 Lukas Zeller <luz@plan44.ch>
+# Copyright (C) 2017-2022 Lukas Zeller <luz@plan44.ch>
 # See LICENSE for more information.
 #
 # Completely rewritten, but made compatible with and partially based on code snippets from
@@ -20,7 +20,7 @@ PKG_NAME:=p44-ledchain
 # version of what we are downloading
 PKG_VERSION:=7
 # version of this makefile
-PKG_RELEASE:=10
+PKG_RELEASE:=11
 
 PKG_BUILD_DIR:=$(KERNEL_BUILD_DIR)/$(PKG_NAME)
 PKG_CHECK_FORMAT_SECURITY:=0
@@ -46,9 +46,8 @@ endef
 
 
 MAKE_OPTS:= \
-	ARCH="$(LINUX_KARCH)" \
-	CROSS_COMPILE="$(TARGET_CROSS)" \
-	SUBDIRS="$(PKG_BUILD_DIR)"
+	$(KERNEL_MAKE_FLAGS) \
+	M="$(PKG_BUILD_DIR)"
 
 define Build/Compile
 	$(MAKE) -C "$(LINUX_DIR)" \
