--- a/p44-extdev-elsner/src/configure.ac
+++ b/p44-extdev-elsner/src/configure.ac
@@ -19,19 +19,32 @@ AC_ARG_ENABLE(
 )
 AM_CONDITIONAL([DEBUG], [test "x$enable_debug" = xyes])
 
-AC_CHECK_LIB(m, atan2, [], [AC_MSG_ERROR([Could not find math lib (m)])])
-AC_CHECK_LIB(rt, clock_gettime, [], [AC_MSG_ERROR([Could not find rt lib for clock_gettime])])
-AC_CHECK_LIB(dl, dlopen, [], [AC_MSG_ERROR([Could not find libdl])])
+AC_ARG_ENABLE(
+  [p44buildow],
+  [AC_HELP_STRING([--enable-p44buildow], [plan44 build for openwrt targets])]
+)
+AM_CONDITIONAL([P44_BUILD_OW], [test "x$enable_p44buildow" = xyes])
+
+
+
+AC_CHECK_LIB(m, atan2, [], [AC_MSG_ERROR([Could not find math lib (m) with atan2])])
+AC_CHECK_LIB(rt, clock_gettime, [], [AC_MSG_ERROR([Could not find rt lib with clock_gettime])])
+AC_CHECK_LIB(dl, dlopen, [], [AC_MSG_ERROR([Could not find libdl with dlopen])])
+
 AC_CHECK_LIB(json-c, json_tokener_get_error, [], [AC_MSG_ERROR([Could not find JSON-C / libjson0 with json_tokener_get_error supported (>=0.10)])])
 
 PKG_PROG_PKG_CONFIG
 
-PKG_CHECK_MODULES([JSONC], [json-c >= 0.10 ], [], [
-  AC_MSG_ERROR([$JSON_PKG_ERRORS])
-])
+PKG_CHECK_MODULES([JSONC], [json-c >= 0.13 ],
+  [AC_DEFINE([HAVE_JSONC_VERSION_013], [1], [We have JSONC version 0.13 or later])],
+  [PKG_CHECK_MODULES([JSONC], [json-c >= 0.10 ], [], [
+    AC_MSG_ERROR([$JSON_PKG_ERRORS])
+  ])]
+)
 
 # Checks for header files.
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h limits.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h unistd.h sys/resource.h], [], [AC_MSG_ERROR([required system header not found])])
+
 
 ASSUMED_BOOST_VER=146
 
