kksdcm-config: update to openwrt 19.07.10

--- a/serialfwd/Makefile
+++ b/serialfwd/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=1.0
 PKG_RELEASE:=2
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_VERSION:=e198c8ec40a31b6e39687125efa159950f55e3e5
+PKG_SOURCE_VERSION:=master
 PKG_MIRROR_HASH:=skip
 PKG_SOURCE_URL:=https://github.com/plan44/serialfwd.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
