kksdcmd: update for OpenWrt 22.03: use libi2c instead of i2c-tools

--- a/kksdcmd/Makefile
+++ b/kksdcmd/Makefile
@@ -7,14 +7,14 @@ include $(TOPDIR)/rules.mk
 # name
 PKG_NAME:=kksdcmd
 # version of what we are downloading
-PKG_VERSION:=1.1.1
+PKG_VERSION:=1.2.0
 # version of this makefile
-PKG_RELEASE:=3
+PKG_RELEASE:=6
 
 PKG_SECONDARY_NAME:=p44mbutil
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_VERSION:=76f80a13d7b2122ae0e21cea09cb3fc73b202aad
+PKG_SOURCE_VERSION:=main
 PKG_MIRROR_HASH:=skip
 #PKG_SOURCE_URL:=ssh://plan44@plan44.ch/home/plan44/sharedgit/kksdcmd.git
 PKG_SOURCE_URL:=https://github.com/plan44/kksdcmd.git
@@ -30,7 +30,7 @@ PKG_USE_MIPS16:=0
 include $(INCLUDE_DIR)/package.mk
 
 define Package/$(PKG_NAME)/Default
-  DEPENDS:=+libstdcpp  +libpthread +librt +boost +libjson-c +libsqlite3 +libopenssl +libpng +i2c-tools +KKSDCMD_UBUS:libubus +KKSDCMD_UBUS:libblobmsg-json +!KKSDCMD_EMBEDDED_LIBMODBUS:libmodbus $(CXX_DEPENDS)
+  DEPENDS:=+libstdcpp  +libpthread +librt +boost +libjson-c +libsqlite3 +libopenssl +libpng +libi2c +KKSDCMD_UBUS:libubus +KKSDCMD_UBUS:libblobmsg-json +!KKSDCMD_EMBEDDED_LIBMODBUS:libmodbus $(CXX_DEPENDS)
 	SECTION:=astrol
 	CATEGORY:=astrol
 	SUBMENU:=custom
