kksdcm-config: GPIO based SPI are now defined via device tree overlay
- add building the overlays in files/dtoverlays from source
- add copying built .dtbo overlays to /lib/firmware/device-tree/overlays from where preinit loads them

--- a/kksdcm-config/files/Makefile
+++ b/kksdcm-config/files/Makefile
@@ -1,8 +1,18 @@
-# Copyright (c) 2021 plan44.ch / Lukas Zeller, Zurich, Switzerland
+# Copyright (c) 2023 plan44.ch / Lukas Zeller, Zurich, Switzerland
 #
 # Author: Lukas Zeller <luz@plan44.ch>
 
 .PHONY: all
 
-all:
-	echo "kksdcm-config: Nothing to do"
+# list the dtbo's required here. Sources must be in dtoverlays
+overlays = spi-custom.dtbo
+
+
+all: $(overlays)
+
+clean:
+	rm $(overlays)
+
+$(overlays) : %.dtbo: dtoverlays/%.dts
+	$(LINUX_DIR)/scripts/dtc/dtc -b 0 -@ -O dtb $< -o $@
+
