--- a/kksdcm-config/Makefile
+++ b/kksdcm-config/Makefile
@@ -61,6 +61,7 @@ define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/sbin
 	$(INSTALL_DIR) $(1)/lib/upgrade/keep.d
 	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
+	$(INSTALL_DIR) $(1)/lib/firmware/device-tree/overlays
 	$(CP) $(PKG_BUILD_DIR)/etc/* $(1)/etc
 	$(CP) $(PKG_BUILD_DIR)/config_p44defaults_${P44_CONFIG_PLATFORM_IDENTIFIER}/* $(1)/etc/config_p44defaults
 	$(CP) $(PKG_BUILD_DIR)/config_p44defaults_${P44_CONFIG_PLATFORM_IDENTIFIER}/* $(1)/etc/config
@@ -69,6 +70,7 @@ define Package/$(PKG_NAME)/install
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/sbin/* $(1)/sbin
 	$(INSTALL_DATA) $(PKG_BUILD_DIR)/keep-kksdcm $(1)/lib/upgrade/keep.d/kksdcm
 	$(INSTALL_DATA) $(PKG_BUILD_DIR)/ubus-acls/* $(1)/usr/share/rpcd/acl.d
+	$(INSTALL_DATA) $(PKG_BUILD_DIR)/*.dtbo $(1)/lib/firmware/device-tree/overlays
 endef
 
 
