--- a/rtpmidid/Makefile
+++ b/rtpmidid/Makefile
@@ -1,19 +1,17 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=rtpmidid
-PKG_RELEASE:=$(AUTORELEASE)
+PKG_VERSION:=23.12
+PKG_RELEASE:=1
 
-PKG_SOURCE_DATE:=2022-06-13
-PKG_SOURCE_VERSION:=835b6352f9c0b3aaee4acd81f3a6ae3fe58adb50
-PKG_HASH:=89f6e806843815482707902e982d34e6bcc4e7913345d98f2e1c78dc111718fb
+PKG_SOURCE_PROTO:=git
+PKG_SOURCE_URL:=https://github.com/davidmoreno/rtpmidid
+PKG_SOURCE_VERSION:=v$(PKG_VERSION)
+PKG_MIRROR_HASH:=902d8f20139835d3fb0a81d43c51d8fbd2207622e2707fe56eb0551559ceb64e
 
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_SOURCE_DATE).tar.gz
-PKG_SOURCE_URL:=https://codeload.github.com/davidmoreno/rtpmidid/tar.gz/$(PKG_SOURCE_VERSION)?
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_SOURCE_VERSION)
-
+PKG_MAINTAINER:=Daniel Golle <daniel@makrotopia.org>
 PKG_LICENSE:=GPL-3.0-or-later LGPL-2.1-or-later
 PKG_LICENSE_FILES:=LICENSE.md LICENSE-lib.txt LICENSE-daemon.txt
-PKG_MAINTAINER:=Daniel Golle <daniel@makrotopia.org>
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
