mg44, vdcd, p44mbrd, serialfwd: update packages to use current versions

--- a/mg44/Makefile
+++ b/mg44/Makefile
@@ -1,4 +1,4 @@
-# Copyright (c) 2016-2020 plan44.ch / Lukas Zeller, Zurich, Switzerland
+# Copyright (c) 2016-2024 plan44.ch / Lukas Zeller, Zurich, Switzerland
 #
 # Author: Lukas Zeller <luz@plan44.ch>
 
@@ -7,18 +7,21 @@ include $(TOPDIR)/rules.mk
 # name
 PKG_NAME:=mg44
 # version of what we are downloading
-PKG_VERSION:=3.12
+PKG_VERSION:=3.13
 # version of this makefile
-PKG_RELEASE:=18
+PKG_RELEASE:=20
 
 PKG_SOURCE_PROTO:=git
-#PKG_SOURCE_VERSION:=master
-PKG_SOURCE_VERSION:=feec94696a6e70d7e5f290bd4f61898b774644b7
+#PKG_SOURCE_VERSION:=main
+PKG_SOURCE_VERSION:=86f246672347e2e40f979a95869d538e6c0cf992
+# Hash can be regenerated with make package/${PKG_NAME}/check FIXUP=1
 PKG_MIRROR_HASH:=skip
 PKG_SOURCE_URL:=https://github.com/plan44/mg44.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
+# package is not mirrored anywhere
+PKG_SOURCE_MIRROR:=0
 
 PKG_FIXUP:=autoreconf
 
@@ -44,7 +47,8 @@ define Package/$(PKG_NAME)/description
 endef
 
 CONFIGURE_ARGS += \
-	$(if $(CONFIG_DEBUG),--enable-debug)
+	$(if $(CONFIG_DEBUG),--enable-debug) \
+	APPLICATION_VERSION=$(PKG_VERSION)
 
 define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/usr/bin
