--- a/vdcd/Makefile
+++ b/vdcd/Makefile
@@ -1,4 +1,4 @@
-# Copyright (c) 2016-2022 plan44.ch / Lukas Zeller, Zurich, Switzerland
+# Copyright (c) 2016-2024 plan44.ch / Lukas Zeller, Zurich, Switzerland
 #
 # Author: Lukas Zeller <luz@plan44.ch>
 
@@ -7,13 +7,14 @@ include $(TOPDIR)/rules.mk
 # name
 PKG_NAME:=vdcd
 # version of what we are downloading
-PKG_VERSION:=2.7.0.35
+PKG_VERSION:=2.8.0.2
 # version of this makefile
 PKG_RELEASE:=202
 
 PKG_SOURCE_PROTO:=git
 #PKG_SOURCE_VERSION:=main
-PKG_SOURCE_VERSION:=8c9de277d013582e3dc7e535732b98d44f0d9cbf
+PKG_SOURCE_VERSION:=ae43715625939040c2c69f851e7f9e18fc068fe8
+# Hash can be regenerated with make package/${PKG_NAME}/check FIXUP=1
 PKG_MIRROR_HASH:=skip
 PKG_SOURCE_URL:=https://github.com/plan44/vdcd.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
@@ -75,7 +76,8 @@ CONFIGURE_ARGS += \
 	$(call autoconf_bool,CONFIG_VDCD_EV,ev) \
 	$(call autoconf_bool,CONFIG_VDCD_UWSC,uwsc) \
 	$(call autoconf_bool,CONFIG_VDCD_MODBUS,modbus) \
-	$(call autoconf_bool,CONFIG_VDCD_EMBEDDED_LIBMODBUS,embeddedlibmodbus)
+	$(call autoconf_bool,CONFIG_VDCD_EMBEDDED_LIBMODBUS,embeddedlibmodbus) \
+	APPLICATION_VERSION=$(PKG_VERSION)
 
 
 define Package/$(PKG_NAME)/install
