--- a/p44maintd/Makefile
+++ b/p44maintd/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=4.5.1
 PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_VERSION:=main
+PKG_SOURCE_VERSION:=553e1aabdea478b497222fdc45e50aa0b95cbb5f
 PKG_MIRROR_HASH:=skip
 PKG_SOURCE_URL:=https://github.com/plan44/p44maintd.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
